<resources>
    <string name="app_name">App</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Your Password?</string>
    <string name="register_account">Create Your New Account</string>
    <string name="no_acc">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>

</resources>